--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <h1>Haloo gaes welcome back to my web</h1>
-    <img src="barkah.jpg" alt="" />
+    <img src="./barkah.jpg" alt="" />
     <button onclick="alert('Yuk Kepoin!')">Klik aja</button>
-    <button><a href="../p03/tabel.html">10 Besti dihidupku</button>
-    <button><a href="../p03css/tabelcss.html">5 Besti dihidupku</button>
-    <button><a href="../p03jQuery/tabeljquery.html">10 Besti dihidupku jQuery</button>
+    <button><a href="./p03/tabel.html">10 Besti dihidupku</button>
+    <button><a href="./p03css/tabelcss.html">5 Besti dihidupku</button>
+    <button><a href="./p03jQuery/tabeljquery.html">10 Besti dihidupku jQuery</button>
   </body>
 </html>
