--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="gaya.css" />
+    <link rel="stylesheet" href="./p02/gaya.css" />
     <title>Mohamad Barkah</title>
   </head>
   <body>
